<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/exitbutton"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="@string/newgamebutton" 
        android:onClick="restartapp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guessno" />

    <EditText
        android:id="@+id/guessbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/guessbox"
        android:visibility="visible" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/hit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showresults"
        android:text="@string/hit"
        android:visibility="visible" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/result"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible" />

</LinearLayout>